UPDATE PROJECT / DESIGN

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Vue.js starter</title>
+    <title>Xing Lei - Creative Developer</title>
   </head>
   <body>
     <app></app>
