--- a/index.html
+++ b/index.html
@@ -2,11 +2,54 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Xing Lei - Creative Developer</title>
+    <link rel="icon" href="/static/img/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" href="/static/img/favicon/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+
+    <!-- SEO -->
+    <meta name="keywords" content="Portfolio, Gobelins, Paris, developer, creative developer, front-end">
+    <meta name="author" content="Lei Xing">
+    <meta name="copyright" content="© Copyright 2016 - Lei Xing" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow">
+    <meta name="location" content="Paris, FRANCE">
+
+    <!-- Facebook meta -->
+    <meta property="og:title" content="Lei XING Creative Developer"/>
+    <meta property="og:image" content="http://leixing.fr/static/img/share/share.jpg"/>
+    <meta property="og:url" content="http://leixing.fr/"/>
+    <meta property="og:site-name" content="Lei XING - Creative Developer student from Gobelins, Paris."/>
+    <meta name="description" content="Lei XING - Creative Developer student from Gobelins, Paris."/>
+
+    <!-- Twitter meta -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@Lei_Xng">
+    <meta name="twitter:creator" content="@Lei_Xng">
+    <meta name="twitter:title" content="Lei XING Creative Developer">
+    <meta name="twitter:description" content="Lei XING - Creative Developer student from Gobelins, Paris.">
+    <meta name="twitter:image:src" content="http://leixing.fr/static/img/share/share.jpg">
+
+    <!-- GOOGLE + Share -->
+    <meta itemprop="name" content="Lei Xing Portfolio - Creative Developer">
+    <meta itemprop="description" content="Lei XING Creative Developer student from Gobelins, Paris.">
+    <meta itemprop="image" content="images/share/share.png">
+    <title>Lei Xing - Creative Developer</title>
   </head>
   <body>
     <app></app>
     <div id="application"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-64482623-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </html>
